GH-15 Adicionando auth na documentação
