# app/Http/Controllers/DoctorController.php
@@ -28,6 +28,7 @@ class DoctorController extends Controller
     *          response=401,
     *          description="Unauthenticated",
     *     ),
+    *     security={{ "apiAuth": {} }},
     * )
     */
 	public function detail_auth_user(){
@@ -143,6 +144,7 @@ class DoctorController extends Controller
     *          response=401,
     *          description="Unauthenticated",
     *     ),
+    *     security={{ "apiAuth": {} }},
     * )
     */
     public function logout()
@@ -215,6 +217,7 @@ class DoctorController extends Controller
     *          response=401,
     *          description="Unauthenticated",
     *     ),
+    *     security={{ "apiAuth": {} }},
     * )
     */
 	public function check_user(){
