# storage/api-docs/api-docs.json
@@ -214,7 +214,7 @@
                 }
             }
         },
-        "/patient/gethandbook/": {
+        "/patient/gethandbook/{id}": {
             "get": {
                 "tags": [
                     "Patient"
@@ -347,6 +347,26 @@
                 ],
                 "description": "Returns a list of patients for the relative",
                 "operationId": "App\\Http\\Controllers\\PatientController::get_all_patient_relatives",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "422": {
+                        "description": "Missing Data"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                }
+            }
+        },
+        "/doctor/patient": {
+            "get": {
+                "tags": [
+                    "Doctor"
+                ],
+                "description": "Returns a list of patients for the doctor",
+                "operationId": "App\\Http\\Controllers\\PatientController::get_all_patient_doctor",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -525,7 +545,12 @@
                     "401": {
                         "description": "Unauthenticated"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
             }
         },
         "/patient/check": {
